# rebeccaskinner.github.io

./: .gitignore  README.md  archive.html  blog.cabal  config.toml  default.nix  deploy  index.html  index.xml  publish  resume.markdown  site.hs  sitemap.xml  syntax.css
_site/: about.html
about/: index.html  index.xml
blog/: index.html  index.xml
blog/creating-a-new-theme/: index.html
blog/haskell_data_visualizations/: index.html
blog/python_and_nix/: index.html
blog/python_todo_list/: index.html
blog/teachinghaskell/: index.html
builder/: default.nix  rebeccaskinner-net.cabal  site.hs
categories/: index.html  index.xml
categories/flask/: index.html  index.xml
categories/nix/: index.html  index.xml
categories/python/: index.html
content/about/: _index.org
content/blog/: _teachinghaskell.md  haskell_data_visualizations.md  index.md  (+3 more)
css/: default.css  syntax.css
docs/: CNAME  about.html  archive.html  contact.html  index.html  resume.html
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html  2018-05-09-python-and-nix.md  2018-05-11-python-todo-list.html  2018-05-11-python-todo-list.md  2021-01-31-hakyll-syntax-highlighting.html  2021-01-31-hakyll-syntax-highlighting.md  2021-06-06-nixifying-a-hakyll-blog.html  2021-06-06-nixifying-a-hakyll-blog.md  2021-06-09-getting-to-the-fixed-point.md  2021-08-25-introduction-to-type-level-programming.md
public/: index.html  index.xml  sitemap.xml
tags/: index.html  index.xml
templates/: .#post.html  default.html  post.html
(+68 files in other folders)
