name:            rebeccaskinner-net
version:         0.1.0.0
build-type:      Simple
cabal-version:   >= 1.10
license:         BSD3
license-file:    LICENSE

executable rebeccaskinner-net-site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.14 && < 4.15
                  , time
                  , filepath
                  , directory
                  , unix
                  , pandoc
  ghc-options:      -threaded
  default-language: Haskell2010
